[package]
name = "txtar"
version = "0.1.0"
edition = "2021"
authors = ["Frank de Jong <f.jin@protonmail.com>"]
description = "A Rust implementation of the txtar Go package"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = "0.1.0"
thiserror = "1.0"

[dev-dependencies]
similar-asserts = "1.2"
